2000-04-17  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>

	* symfile.c (add_symbol_file_command): Rewrite the arguments
 	processing part. Simplify syntax of command. Remove support for
 	rombug.
	(_initialize_symfile): Update help message for add-symbol-file
 	command.

Mon Apr 17 15:53:38 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* gdbarch.sh (IEEE_FLOAT): Only dump when defined.
	* gdbarch.h, gdbarch.c: Re-generate.

Mon Apr 17 11:26:01 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* remote.c (REMOTE_TRANSLATE_XFER_ADDRESS), mem-break.c
 	(MEMORY_INSERT_BREAKPOINT, MEMORY_REMOVE_BREAKPOINT), target.h
 	(BREAKPOINT_FROM_PC), valops.c (COERCE_FLOAT_TO_DOUBLE),
 	gdbarch.sh (D10V_MAKE_DADDR, D10V_MAKE_IADDR,
 	FRAMELESS_FUNCTION_INVOCATION, REGISTER_CONVERTIBLE,
 	REGISTER_CONVERT_TO_VIRTUAL, REGISTER_CONVERT_TO_RAW,
 	REGISTER_NAME), findvar.c (POINTER_TO_ADDRESS,
 	ADDRESS_TO_POINTER): Delete default definition.  Handled by
 	gdbarch.

	* gdbarch.sh: Make multi-arch defaults, defaults for non-
 	multi-arch targets.
	(REGISTER_NAME, COERCE_FLOAT_TO_DOUBLE, REGISTER_CONVERTIBLE,
 	REGISTER_CONVERT_TO_VIRTUAL, REGISTER_CONVERT_TO_RAW,
 	D10V_MAKE_DADDR, D10V_MAKE_IADDR, BREAKPOINT_FROM_PC,
 	MEMORY_INSERT_BREAKPOINT, MEMORY_REMOVE_BREAKPOINT,
 	REMOTE_TRANSLATE_XFER_ADDRESS, FRAMELESS_FUNCTION_INVOCATION):
 	Provide default/legacy implementation.
	(REGISTER_NAMES, CALL_DUMMY): Allow legacy definition.
	* gdbarch.h, gdbarch.c: Re-generate.

2000-04-16  Jim Blandy  <jimb@redhat.com>

	* findvar.c (store_typed_address, extract_typed_address): Fix
	function names in error messages.

2000-04-16  Eli Zaretskii  <eliz@is.elta.co.il>

	* config/djgpp/config.sed: Fix the lines which edit clean: and
        uninstall-info: targets.

2000-04-14  Jim Blandy  <jimb@redhat.com>

	Provide the hooks needed to support architectures on which
	pointers are not always simple byte addresses.

	* gdbarch.sh (POINTER_TO_ADDRESS, ADDRESS_TO_POINTER): Two new